--- a/src/MinimalExampleApp/Resources/wwwroot/excluded_border_test.html
+++ b/src/MinimalExampleApp/Resources/wwwroot/excluded_border_test.html
@@ -46,8 +46,9 @@
         }
 
         .container-box {
-            border-radius: 30px 0 30px 0;
+            /*            border-radius: 30px 0 30px 0;*/
             /*            border: 2px solid #57344c;*/
+            border-radius: 20px;
             box-sizing: content-box;
             width: 100%;
             height: 100%;
